Получить запросы рекомендаций с фильтрами